# prism

./: .gitignore  .gitmodules  CMakeLists.txt  CmakeLists.txt  LICENSE  README.md  package.json  prism.podspec  react-native.config.js  usage  vcpkg.json
.github/workflows/: ci.yml
cmake/: portfile.cmake  prismConfig.cmake.in  vcpkg.json.in  vcpkg_cus_info.json.in
include/prism/: prism.hpp  prismJson.hpp  prismSql.hpp  prismYaml.hpp
include/prism/utilities/: typeName.hpp
npm/: react-native.config.js
npm/android/: build.gradle
tests/: main.cpp  test_prism.cpp  test_prismJson.cpp
tests/json_tests/: all_containers_stress_tests.cpp  all_fields_default_tests.cpp  attributes_tests.cpp  basic_tests.cpp  bool_case_insensitive_tests.cpp  bool_field_edge_tests.cpp  bool_in_containers_tests.cpp  char_types_tests.cpp  complex_nested_round_trip_tests.cpp  container_expanded_tests.cpp  container_tests.cpp  datetime_timestamp_tests.cpp  deep_nested_map_tests.cpp  deep_nesting_stress_tests.cpp  deep_nesting_tests.cpp  default_list_values_round_trip_tests.cpp  deque_edge_cases_tests.cpp  deque_int_large_tests.cpp  deque_set_string_tests.cpp  deque_set_with_enum_tests.cpp  deque_struct_field_tests.cpp  embedded_struct_all_optionals_tests.cpp  embedded_struct_field_tests.cpp  embedded_struct_subfield_tests.cpp  embedded_struct_vec_sp_multi_tests.cpp  empty_string_tests.cpp  enum_container_tests.cpp  enums_tests.cpp  exception_handling_tests.cpp  float_boundary_tests.cpp  float_double_edge_cases_tests.cpp  float_precision_tests.cpp  flow_level0_json_tests.cpp  flow_level_nested_tests.cpp  full_struct_round_trip_tests.cpp  ignore_field_tests.cpp  inheritance_all_fields_tests.cpp  inheritance_combo_tests.cpp  inheritance_newer_fields_tests.cpp  inheritance_scalar_tests.cpp  (+139 more)
tests/models/: test_model.h
tests/reflection_tests/: basic_tests.cpp  enums_tests.cpp
tests/sql_tests/: class_tests.cpp  create_tests.cpp  insert_tests.cpp  select_tests.cpp
tests/yaml_tests/: attributes_tests.cpp  basic_tests.cpp  block_all_containers_stress_tests.cpp  block_all_fields_default_tests.cpp  block_bool_field_edge_tests.cpp  block_bool_float_combo_tests.cpp  block_bool_in_containers_tests.cpp  block_complex_nested_round_trip_tests.cpp  block_datetime_extended_tests.cpp  block_datetime_tests.cpp  block_datetime_timestamp_tests.cpp  block_deep_nested_array_tests.cpp  block_deep_nesting_stress_tests.cpp  block_default_list_preserved_tests.cpp  block_deque_edge_cases_tests.cpp  block_deque_int_large_tests.cpp  block_deque_set_string_tests.cpp  block_deque_set_with_enum_tests.cpp  block_embedded_struct_all_optionals_tests.cpp  block_embedded_struct_field_tests.cpp  block_embedded_struct_subfield_tests.cpp  block_embedded_struct_vec_sp_multi_tests.cpp  block_empty_string_field_tests.cpp  block_float_boundary_tests.cpp  block_float_double_edge_cases_tests.cpp  block_format_round_trip_tests.cpp  block_full_struct_round_trip_tests.cpp  block_inheritance_all_fields_tests.cpp  block_inheritance_combo_tests.cpp  block_inheritance_scalar_tests.cpp  block_inheritance_tests.cpp  block_int_boundary_tests.cpp  block_integer_boundary_tests.cpp  block_lang_enum_struct_field_tests.cpp  block_lang_field_combo_tests.cpp  block_large_list_stress_tests.cpp  block_large_vec_sp_tests.cpp  block_level0_combo_tests.cpp  block_level0_deep_struct_tests.cpp  block_level0_level3_combo_tests.cpp  (+187 more)
